; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_caret.c_ME_ArrowKey.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_caret.c_ME_ArrowKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_18__ = type { i32, i32*, i8* }

@FALSE = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ME_ArrowKey(%struct.TYPE_18__* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.TYPE_18__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  store %struct.TYPE_18__* %0, %struct.TYPE_18__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  store i32 0, i32* %9, align 4
  %13 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = load i32, i32* %9, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  store i32* %18, i32** %10, align 8
  %19 = load i32*, i32** %10, align 8
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %11, align 4
  %21 = load i8*, i8** @FALSE, align 8
  store i8* %21, i8** %12, align 8
  %22 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %23 = call i32 @ME_CheckCharOffsets(%struct.TYPE_18__* %22)
  %24 = load i32, i32* %6, align 4
  switch i32 %24, label %90 [
    i32 132, label %25
    i32 129, label %39
    i32 128, label %53
    i32 135, label %57
    i32 130, label %61
    i32 131, label %64
    i32 133, label %67
    i32 134, label %80
  ]

25:                                               ; preds = %4
  %26 = load i8*, i8** @FALSE, align 8
  %27 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %27, i32 0, i32 2
  store i8* %26, i8** %28, align 8
  %29 = load i8*, i8** %8, align 8
  %30 = icmp ne i8* %29, null
  br i1 %30, label %31, label %34

31:                                               ; preds = %25
  %32 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %33 = call i8* @ME_MoveCursorWords(%struct.TYPE_18__* %32, i32* %11, i32 -1)
  store i8* %33, i8** %12, align 8
  br label %38

34:                                               ; preds = %25
  %35 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %36 = load i8*, i8** %7, align 8
  %37 = call i8* @ME_MoveCursorChars(%struct.TYPE_18__* %35, i32* %11, i32 -1, i8* %36)
  store i8* %37, i8** %12, align 8
  br label %38

38:                                               ; preds = %34, %31
  br label %90

39:                                               ; preds = %4
  %40 = load i8*, i8** @FALSE, align 8
  %41 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %42 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %41, i32 0, i32 2
  store i8* %40, i8** %42, align 8
  %43 = load i8*, i8** %8, align 8
  %44 = icmp ne i8* %43, null
  br i1 %44, label %45, label %48

45:                                               ; preds = %39
  %46 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %47 = call i8* @ME_MoveCursorWords(%struct.TYPE_18__* %46, i32* %11, i32 1)
  store i8* %47, i8** %12, align 8
  br label %52

48:                                               ; preds = %39
  %49 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %50 = load i8*, i8** %7, align 8
  %51 = call i8* @ME_MoveCursorChars(%struct.TYPE_18__* %49, i32* %11, i32 1, i8* %50)
  store i8* %51, i8** %12, align 8
  br label %52

52:                                               ; preds = %48, %45
  br label %90

53:                                               ; preds = %4
  %54 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %55 = load i8*, i8** %7, align 8
  %56 = call i32 @ME_MoveCursorLines(%struct.TYPE_18__* %54, i32* %11, i32 -1, i8* %55)
  br label %90

57:                                               ; preds = %4
  %58 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %59 = load i8*, i8** %7, align 8
  %60 = call i32 @ME_MoveCursorLines(%struct.TYPE_18__* %58, i32* %11, i32 1, i8* %59)
  br label %90

61:                                               ; preds = %4
  %62 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %63 = call i32 @ME_ArrowPageUp(%struct.TYPE_18__* %62, i32* %11)
  br label %90

64:                                               ; preds = %4
  %65 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %66 = call i32 @ME_ArrowPageDown(%struct.TYPE_18__* %65, i32* %11)
  br label %90

67:                                               ; preds = %4
  %68 = load i8*, i8** %8, align 8
  %69 = icmp ne i8* %68, null
  br i1 %69, label %70, label %73

70:                                               ; preds = %67
  %71 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %72 = call i32 @ME_ArrowCtrlHome(%struct.TYPE_18__* %71, i32* %11)
  br label %76

73:                                               ; preds = %67
  %74 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %75 = call i32 @ME_ArrowHome(%struct.TYPE_18__* %74, i32* %11)
  br label %76

76:                                               ; preds = %73, %70
  %77 = load i8*, i8** @FALSE, align 8
  %78 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %79 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %78, i32 0, i32 2
  store i8* %77, i8** %79, align 8
  br label %90

80:                                               ; preds = %4
  %81 = load i8*, i8** %8, align 8
  %82 = icmp ne i8* %81, null
  br i1 %82, label %83, label %86

83:                                               ; preds = %80
  %84 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %85 = call i32 @ME_ArrowCtrlEnd(%struct.TYPE_18__* %84, i32* %11)
  br label %89

86:                                               ; preds = %80
  %87 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %88 = call i32 @ME_ArrowEnd(%struct.TYPE_18__* %87, i32* %11)
  br label %89

89:                                               ; preds = %86, %83
  br label %90

90:                                               ; preds = %4, %89, %76, %64, %61, %57, %53, %52, %38
  %91 = load i8*, i8** %7, align 8
  %92 = icmp ne i8* %91, null
  br i1 %92, label %99, label %93

93:                                               ; preds = %90
  %94 = load i32, i32* %11, align 4
  %95 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %96 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %95, i32 0, i32 1
  %97 = load i32*, i32** %96, align 8
  %98 = getelementptr inbounds i32, i32* %97, i64 1
  store i32 %94, i32* %98, align 4
  br label %99

99:                                               ; preds = %93, %90
  %100 = load i32, i32* %11, align 4
  %101 = load i32*, i32** %10, align 8
  store i32 %100, i32* %101, align 4
  %102 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %103 = call i32 @ME_InvalidateSelection(%struct.TYPE_18__* %102)
  %104 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %105 = call i32 @ME_Repaint(%struct.TYPE_18__* %104)
  %106 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %107 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %106, i32 0, i32 0
  %108 = load i32, i32* %107, align 8
  %109 = load i8*, i8** @FALSE, align 8
  %110 = call i32 @ITextHost_TxShowCaret(i32 %108, i8* %109)
  %111 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %112 = call i32 @ME_EnsureVisible(%struct.TYPE_18__* %111, i32* %11)
  %113 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %114 = call i32 @ME_ShowCaret(%struct.TYPE_18__* %113)
  %115 = load %struct.TYPE_18__*, %struct.TYPE_18__** %5, align 8
  %116 = call i32 @ME_SendSelChange(%struct.TYPE_18__* %115)
  %117 = load i8*, i8** %12, align 8
  ret i8* %117
}

declare dso_local i32 @ME_CheckCharOffsets(%struct.TYPE_18__*) #1

declare dso_local i8* @ME_MoveCursorWords(%struct.TYPE_18__*, i32*, i32) #1

declare dso_local i8* @ME_MoveCursorChars(%struct.TYPE_18__*, i32*, i32, i8*) #1

declare dso_local i32 @ME_MoveCursorLines(%struct.TYPE_18__*, i32*, i32, i8*) #1

declare dso_local i32 @ME_ArrowPageUp(%struct.TYPE_18__*, i32*) #1

declare dso_local i32 @ME_ArrowPageDown(%struct.TYPE_18__*, i32*) #1

declare dso_local i32 @ME_ArrowCtrlHome(%struct.TYPE_18__*, i32*) #1

declare dso_local i32 @ME_ArrowHome(%struct.TYPE_18__*, i32*) #1

declare dso_local i32 @ME_ArrowCtrlEnd(%struct.TYPE_18__*, i32*) #1

declare dso_local i32 @ME_ArrowEnd(%struct.TYPE_18__*, i32*) #1

declare dso_local i32 @ME_InvalidateSelection(%struct.TYPE_18__*) #1

declare dso_local i32 @ME_Repaint(%struct.TYPE_18__*) #1

declare dso_local i32 @ITextHost_TxShowCaret(i32, i8*) #1

declare dso_local i32 @ME_EnsureVisible(%struct.TYPE_18__*, i32*) #1

declare dso_local i32 @ME_ShowCaret(%struct.TYPE_18__*) #1

declare dso_local i32 @ME_SendSelChange(%struct.TYPE_18__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
